--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a:visited {
 
 strong {
 	font-style: oblique;
+	font-weight: 600;
 }
 
 span {
@@ -62,14 +63,12 @@ span {
 	margin-bottom: 0.5rem;
 }
 
+
+
 .overlay,
 .overlay-content {
 	display: none;
 	position: fixed;
-	background-color: transparent;
-
-	width: 100%;
-	height: 100%;
 
 	top: 0;
 	left: 0;
@@ -78,11 +77,14 @@ span {
 
 .overlay {
 	z-index: 99999;
-
+	width: 100vw;
+	height: 100vh;
 }
 
 .overlay-content {
 	z-index: 99999;
+	width: 100vw;
+	height: 100vh;
 
 }
 
@@ -110,7 +112,6 @@ footer {
 
 header {
 	width: 100%;
-	margin-bottom: 4rem;
 }
 
 header div {
